# robotics1

dobbie_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dobbie_ws/install/descy/lib/descy/: gui.py
dobbie_ws/install/descy/share/descy/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
dobbie_ws/log/: latest_build
dobbie_ws/src/descy/: CMakeLists.txt  package.xml
dobbie_ws/src/descy/config/: controller.yaml
dobbie_ws/src/descy/launch/: classic.launch.py  digital_twin.launch.py  display.launch.py  gazebo.launch.py
dobbie_ws/src/descy/meshes/: base.stl  converted_base_mesh.stl  converted_link1_mesh.stl  converted_link2_mesh.stl  converted_link4_mesh.stl  converted_link5_mesh.stl  link3_mesh.stl
dobbie_ws/src/descy/rviz/: display.rviz
dobbie_ws/src/descy/scripts/: gui.py  tesseract.py  test.py
dobbie_ws/src/descy/urdf/: dobbie.urdf  dobbie.urdf.xacro
dobbie_ws/src/descy/worlds/: empty.sdf
dobbie_ws/src/dobbie_moveit_config/: .setup_assistant  CMakeLists.txt
dobbie_ws/src/dobbie_moveit_config/config/: dobbie.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml
dobbie_ws/src/dobbie_moveit_config/launch/: setup_assistant.launch.py
dobbie_ws/src/dobot_moveit_config/: CMakeLists.txt
dobbie_ws/src/dobot_moveit_config/config/: dobbie.urdf.xacro
dobbie_ws/src/dobot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
(+62 files in other folders)
